Fix mobile body padding whitespace issue

--- a/styles/bootstrap-responsive.css
+++ b/styles/bootstrap-responsive.css
@@ -827,9 +827,13 @@
 }
 /* Tablets */
 @media (max-width: 767px) {
-  body {
+  .container {
     padding-right: 20px;
     padding-left: 20px;
+  }
+  .navContainer {
+    padding-right: 0;
+    padding-left: 0;
   }
   .navbar-fixed-top,
   .navbar-fixed-bottom,
